// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonsAddDelete tests matches the snapshot 1`] = `
<div>
  <div
    class="container"
    style="margin-top: 0px; margin-right: 0px;"
  >
    <button>
      +
    </button>
    <button>
      -
    </button>
  </div>
</div>
`;

exports[`ButtonsAddDelete tests matches the snapshot with margins 1`] = `
<div>
  <div
    class="container"
    style="margin-top: 100px; margin-right: 100px;"
  >
    <button>
      +
    </button>
    <button>
      -
    </button>
  </div>
</div>
`;
